# aegis-gui

./: aegisgui.flatpak  build.sh  meson.build  modules.json  org.athenaos.aegisgui.json  org.athenaos.aegisgui.yml
aegis_gui/: about.ui  aegis_gui.gresource.xml  aegis_gui.in  browsers.py  desktops.py  displaymanagers.py  kernels.py  keymaps.py  main.py  meson.build  shells.py  style.css  terminals.py  themes.py  window.py  window.ui
aegis_gui/classes/: aegis_screen.py  install_prefs.py  meson.build  partition.py
aegis_gui/functions/: browser_screen.py  desktop_screen.py  displaymanager_screen.py  finished_screen.py  install_screen.py  kernel_screen.py  keyboard_screen.py  language_screen.py  locale_screen.py  meson.build  misc_screen.py  partition_screen.py  shell_screen.py  summary_screen.py  terminal_screen.py  theme_screen.py  timezone_screen.py  user_screen.py  welcome_screen.py
aegis_gui/locales/: africa.py  america.py  antarctica.py  arctic.py  asia.py  atlantic.py  australia.py  brazil.py  canada.py  chile.py  europe.py  indian.py  locales_list.py  meson.build  mexico.py  pacific.py
aegis_gui/pages/: browser_screen.ui  desktop_screen.ui  displaymanager_screen.ui  finished_screen.ui  install_screen.ui  kernel_screen.ui  language_screen.ui  misc_screen.ui  partition_screen.ui  shell_screen.ui  summary_screen.ui  terminal_screen.ui  theme_screen.ui  user_screen.ui  welcome_screen.ui
aegis_gui/pages/keyboard/: keyboard_screen.ui
aegis_gui/pages/locale/: locale_screen.ui
aegis_gui/pages/timezone/: timezone_screen.ui
aegis_gui/scripts/: install.sh  meson.build  savePrefs.sh
aegis_gui/utils/: disks.py  meson.build
aegis_gui/widgets/: browser.py  browser.ui  desktop.py  disk.py  displaymanager.py  displaymanager.ui  kernel.py  kernel.ui  layout.py  locale.py  meson.build  partition.py  selected_locale.py  shell.py  shell.ui  terminal.py  terminal.ui  theme.py  theme.ui  timezone.py  variant.py
data/: meson.build  org.athenaos.aegisgui.appdata.xml.in  org.athenaos.aegisgui.desktop.in  org.athenaos.aegisgui.gschema.xml
data/icons/: meson.build
po/: POTFILES  aegis_gui.pot  az.po  ca.po  cs.po  de.po  es.po  it.po  meson.build  pl.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  uk.po
